cmake_minimum_required(VERSION 3.16.2)

project(cpp_template)

set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

set(COMPILE_OPTIONS -Wall -Wextra -Wpedantic -Werror -std=c++20)

file(GLOB_RECURSE SRC_FILES src/*.cpp)
add_executable(${PROJECT_NAME} ${SRC_FILES})

target_include_directories(${PROJECT_NAME} PRIVATE include)
